--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.lorem-p{
+  color: black;
+  background-color: cyan;
+  width: 50%;
+  margin: 0 auto;
+  padding: 10px;
+  border-radius: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+  text-align: center;
+  margin: 0 auto;
+  width: 20%;
+}
+
+nav ul{
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+img{
+  width: 100%;
+  height: 650px;
+}
+
+.img1{
+  width: 100%;
+  margin-top: -5px;
 }
