--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
+body{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+h1{
+  text-align: center;
+}
 .lorem-p{
-  color: black;
-  background-color: cyan;
-  width: 50%;
+  color: white;
+  background-color: black;
   margin: 0 auto;
   padding: 10px;
   border-radius: 20px;
